objects/Apttus__Agreement_Term_Exception__c.object
<CustomObject>
    <description>Term Exceptions associated with a given Agreement</description>
    <fields>
        <fullName>Apttus__AgreementClauseId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated agreement clause</description>
        <label>Agreement Clause</label>
        <referenceTo>Apttus__Agreement_Clause__c</referenceTo>
        <relationshipLabel>Agreement Term Exceptions</relationshipLabel>
        <relationshipName>AgreementTermExceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Agreement__c</fullName>
        <description>Associated Agreement</description>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Agreement Term Exceptions</relationshipLabel>
        <relationshipName>R00N50000001qROLEA2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus__Approval_Status__c</fullName>
        <description>Approval status of current agreement term exception.</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Comments__c</fullName>
        <description>Comments about this Term Exception in the context of this Agreement.</description>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Description__c</fullName>
        <label>Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Exception_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference/Link to the corresponding record in the Term Exception master table.</description>
        <label>Exception Name</label>
        <referenceTo>Apttus__Term_Exception__c</referenceTo>
        <relationshipLabel>Agreement Term Exceptions</relationshipLabel>
        <relationshipName>Master_Term_Exception</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Exception__c</fullName>
        <description>Term Exception as detailed in Term Exception master table.</description>
        <label>Exception</label>
        <type>TextArea</type>
    </fields>
    <label>Agreement Term Exception</label>
    <nameField>
        <displayFormat>ATE-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Term Exceptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>